--- a/dts/bindings/flash_controller/st,stm32-ospi-nor.yaml
+++ b/dts/bindings/flash_controller/st,stm32-ospi-nor.yaml
@@ -10,6 +10,7 @@ description: |
                 compatible = "st,stm32-ospi-nor";
                 label = "MX25LM512";
                 reg = <0>;
+                data_mode = <1>; /* data on a single line */
                 ospi-max-frequency = <80000000>;
                 size = <0x20000000>; /* 512 Mbits */
                 status = "okay";
@@ -28,6 +29,10 @@ properties:
       type: int
       required: true
       description: Maximum clock frequency of device's OSPI interface in Hz
+    data-mode:
+      type: int
+      required: true
+      description: the OSPI data Mode is 0 or 1, 2, 4, 8
     label:
       required: true
     size:
