--- a/dts/arm/st/l5/stm32l5.dtsi
+++ b/dts/arm/st/l5/stm32l5.dtsi
@@ -367,6 +367,7 @@
 			label = "DAC_1";
 			#io-channel-cells = <1>;
 		};
+
 		spi2: spi@40003800 {
 			compatible = "st,stm32-spi-fifo", "st,stm32-spi";
 			#address-cells = <1>;
@@ -387,6 +388,17 @@
 			clocks = <&rcc STM32_CLOCK_BUS_APB1 0x00008000>;
 			status = "disabled";
 			label = "SPI_3";
+		};
+
+		octospi1: octospi@44021000 {
+			compatible = "st,stm32-ospi";
+			reg = <0x44021000 0x400>;
+			interrupts = <76 0>;
+			clocks = <&rcc STM32_CLOCK_BUS_AHB3 0x00000100>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			status = "disabled";
+			label= "OSPI1";
 		};
 
 		rng: rng@420c0800 {
