--- a/dts/arm/st/u5/stm32u5.dtsi
+++ b/dts/arm/st/u5/stm32u5.dtsi
@@ -347,6 +347,28 @@
 			label = "LPTIM_1";
 		};
 
+		octospi1: octospi@420d1400 {
+			compatible = "st,stm32-ospi";
+			reg = <0x420d1400 0x400>;
+			interrupts = <76 0>;
+			clocks = <&rcc STM32_CLOCK_BUS_AHB2_2 0x00000010>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			status = "disabled";
+			label= "OCTOSPI1";
+		};
+
+		octospi2: octospi@420d2400 {
+			compatible = "st,stm32-ospi";
+			reg = <0x420d2400 0x400>;
+			interrupts = <120 0>;
+			clocks = <&rcc STM32_CLOCK_BUS_AHB2_2 0x00000100>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			status = "disabled";
+			label= "OSCTOPI2";
+		};
+
 		rng: rng@420c0800 {
 			compatible = "st,stm32-rng";
 			reg = <0x420c0800 0x400>;
