boards: b_u585i_iot02a: Enable spi1 on board
The spi1 is present on the Arduino connector CN13
on pins D13, 12, 11, 10.
The PCLK2 clock feeding the SPI1 is reduced by 2 (apb2 prescaler)
to accept the slow freq config.

Signed-off-by: Francois Ramu <francois.ramu@st.com>

--- a/boards/arm/b_u585i_iot02a/b_u585i_iot02a.dts
+++ b/boards/arm/b_u585i_iot02a/b_u585i_iot02a.dts
@@ -64,3 +64,13 @@
 &gpdma1 {
 	status = "okay";
 };
+
+&rcc {
+	apb2-prescaler = <2>;
+};
+
+&spi1 {
+	pinctrl-0 = <&spi1_sck_pe13 &spi1_miso_pe14 &spi1_mosi_pe15>;
+	cs-gpios = <&gpioe 12 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+	status = "okay";
+};
