boards: nucleo_u575zi_q: Enable spi1 on board
The spi1 is present on the Arduino connector CN13
on pins D13, 12, 11.
The PCLK2 clock feeding the SPI1 is reduced by 2 (apb2 prescaler)
to accept the slow freq config.

Signed-off-by: Francois Ramu <francois.ramu@st.com>

--- a/boards/arm/nucleo_u575zi_q/nucleo_u575zi_q.dts
+++ b/boards/arm/nucleo_u575zi_q/nucleo_u575zi_q.dts
@@ -27,6 +27,10 @@
 	};
 };
 
+&rcc {
+	apb2-prescaler = <2>;
+};
+
 &usart1 {
 	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
 	pinctrl-names = "default";
@@ -35,5 +39,12 @@
 };
 
 &gpdma1 {
+	status = "okay";
+};
+
+&spi1 {
+	pinctrl-0 = <&spi1_sck_pa5 &spi1_miso_pa6 &spi1_mosi_pa7>;
+	cs-gpios = <&gpiod 14 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+	pinctrl-names = "default";
 	status = "okay";
 };
